<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView_id"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_main_iv_height"
            android:contentDescription="@string/abc"
            android:scaleType="fitXY"
            android:src="@drawable/angrybird" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@color/btnBgColor"
                android:onClick="signIn"
                android:textSize="@dimen/text_dimen"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@color/btnBgColor"
                android:onClick="signUp"
                android:text="@string/sign_up"
                android:textSize="@dimen/text_dimen"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </LinearLayout>


    <FrameLayout
        android:id="@+id/frag1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
